sfdx/force-app/main/default/objects/Order/fields/Skip_Past_Initial_Invoices__c.field-meta.xml
<CustomField>
  <fullName>Skip_Past_Initial_Invoices__c</fullName>
  <description>If this initial order is backdated, Stripe will prorate the past period. Checking this field indicates that we should not bill the customer for that period of time.</description>
  <inlineHelpText>If this initial order is backdated, Stripe will prorate the past period. Checking this field indicates that we should not bill the customer for that period of time.</inlineHelpText>
  <label>Skip Past Invoices</label>
  <defaultValue>false</defaultValue>
  <type>Checkbox</type>
</CustomField>