sfdx/force-app/main/default/objects/Order/fields/Stripe_Account__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account__c</fullName>
    <label>Stripe Account</label>
    <description>The Stripe Account to use for this order (if not the default account).</description>
    <inlineHelpText>The Stripe Account to use for this order (if not the default account).</inlineHelpText>
    <referenceTo>Stripe_Account__c</referenceTo>
    <relationshipName>Stripe_Account_In_Order</relationshipName>
    <type>Lookup</type>
</CustomField>