sfdx/force-app/main/default/objects/Order/fields/Stripe_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Dashboard_Link__c</fullName>
    <description>Provides a direct link to the Stripe Subscription corresponding to this Salesforce Order.</description>
    <inlineHelpText>This link takes you to the Subscription Record in the Stripe Dashboard.</inlineHelpText>
    <formula>&quot;https://dashboard.stripe.com/&quot; &amp; IF($Setup.Stripe_Connection__c.Primary_Stripe_Account_Livemode__c == "live", &quot;&quot;, &quot;test/&quot;) &amp; &quot;id/&quot; &amp; Stripe_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Dashboard Link</label>
    <type>Text</type>
</CustomField>