sfdx/force-app/main/default/objects/Order/fields/Stripe_Invoice_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_Payment_Link__c</fullName>
    <description>Holds the URL to the Stripe-hosted invoice, to allow for invoice payment.</description>
    <inlineHelpText>This link takes you to the Stripe-hosted Invoice for invoice payment.</inlineHelpText>
    <label>Stripe Invoice Payment Link</label>
    <type>Url</type>
</CustomField>