sfdx/force-app/main/default/objects/Order/fields/Stripe_Revenue_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Revenue_Contract_ID__c</fullName>
    <externalId>true</externalId>
    <description>The Id of the Revenue Contract Record in the Stripe data set.</description>
    <inlineHelpText>The Id of the Revenue Contract Record in your Stripe Dashboard.</inlineHelpText>
    <label>Stripe Revenue Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>