sfdx/force-app/main/default/objects/Order/fields/Stripe_Subscription_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Payment_Link__c</fullName>
    <label>Stripe Subscription Payment Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>